syntax = "proto3";
package forge_abi;

message TestTicket {
  string row = 1;
  string seat = 2;
  string room = 3;
  string time = 4;
  string name = 5;
}